Fixed contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 :root{
-    --main-color: #dee3e4;
+    --main-color: #F0F0F0;
     --second-color: #050505;
-    --accend-color: #0979d7;
+    --accend-color: #086FC4;
 }
 
 * {
