--- a/week02/styles/temples-large.css
+++ b/week02/styles/temples-large.css
@@ -1,12 +1,16 @@
 :root{
-    --main-color: #dee3e4;
+    --main-color: #F0F0F0;
     --second-color: #050505;
-    --accend-color: #0979d7;
+    --accend-color: #054376;
 }
 
 h1, h2, h3, h4 {
     color: var(--main-color);
     font-family: 'Montserrat', sans-serif;
+}
+
+.homeH2 {
+    color: #050505;
 }
 
 a {
